Change owner from 'juandllo' to 'Personal'

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -12,5 +12,5 @@ spec:
   type: website
   lifecycle: production
   system: Advisors
-  owner: juandllo
+  owner: Personal
   providesApis: [advisors-backend]
