Update providesApis from advisors-backend to advisors-api

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -13,4 +13,4 @@ spec:
   lifecycle: production
   system: Advisors
   owner: Personal
-  providesApis: [advisors-backend]
+  providesApis: [advisors-api]
