--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -13,4 +13,4 @@ spec:
   lifecycle: production
   system: Advisors
   owner: Personal
-  providesApis: [advisors-api]
+  consumesApis: [advisors-api]
